refactor:GPT-000: folder structure, docker build
