# docs/swagger.json
@@ -21,6 +21,96 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/accounts/v1/signin": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "AccountController"
+                ],
+                "summary": "SignIn user on user demand.",
+                "parameters": [
+                    {
+                        "description": "user input",
+                        "name": "model",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.UserSignIn"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.AuthTokens"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            }
+        },
+        "/accounts/v1/signup": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "AccountController"
+                ],
+                "summary": "Create account on user demand.",
+                "parameters": [
+                    {
+                        "description": "user input",
+                        "name": "model",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.UserSignUp"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/model.UserInfo"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            }
+        },
         "/users/v1/:id": {
             "get": {
                 "consumes": [
@@ -46,7 +136,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.UserInfo"
+                            "$ref": "#/definitions/model.UserInfo"
                         }
                     },
                     "400": {
@@ -81,7 +171,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.UserInfoUpdate"
+                            "$ref": "#/definitions/model.UserInfoUpdate"
                         }
                     }
                 ],
@@ -89,7 +179,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.UserInfo"
+                            "$ref": "#/definitions/model.UserInfo"
                         }
                     },
                     "400": {
@@ -139,7 +229,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.UserInfo"
+                            "$ref": "#/definitions/model.UserInfo"
                         }
                     },
                     "400": {
@@ -157,8 +247,8 @@
                 }
             }
         },
-        "/users/v1/signin": {
-            "post": {
+        "/users/v1/session": {
+            "get": {
                 "consumes": [
                     "application/json"
                 ],
@@ -168,68 +258,12 @@
                 "tags": [
                     "UserController"
                 ],
-                "summary": "SignIn user on user demand.",
-                "parameters": [
-                    {
-                        "description": "user input",
-                        "name": "model",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.UserSignUp"
-                        }
-                    }
-                ],
+                "summary": "Get current user information.",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.UserInfo"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {}
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {}
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {}
-                    }
-                }
-            }
-        },
-        "/users/v1/signup": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "UserController"
-                ],
-                "summary": "Create account on user demand.",
-                "parameters": [
-                    {
-                        "description": "user input",
-                        "name": "model",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.UserSignUp"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/models.UserInfo"
+                            "$ref": "#/definitions/model.UserInfo"
                         }
                     },
                     "400": {
@@ -249,7 +283,24 @@
         }
     },
     "definitions": {
-        "models.UserInfo": {
+        "model.AuthTokens": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "at_expire_in": {
+                    "type": "string"
+                },
+                "refresh_token": {
+                    "type": "string"
+                },
+                "rt_expire_in": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.UserInfo": {
             "type": "object",
             "properties": {
                 "birthday": {
@@ -262,7 +313,8 @@
                     "type": "string"
                 },
                 "gender": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "male, female"
                 },
                 "id": {
                     "type": "integer"
@@ -278,7 +330,7 @@
                 }
             }
         },
-        "models.UserInfoUpdate": {
+        "model.UserInfoUpdate": {
             "type": "object",
             "required": [
                 "birthday",
@@ -286,7 +338,8 @@
                 "gender",
                 "id",
                 "name",
-                "photo_url"
+                "photo_url",
+                "status"
             ],
             "properties": {
                 "birthday": {
@@ -296,7 +349,8 @@
                     "type": "string"
                 },
                 "gender": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "male, female"
                 },
                 "id": {
                     "type": "integer"
@@ -306,16 +360,35 @@
                 },
                 "photo_url": {
                     "type": "string"
+                },
+                "status": {
+                    "type": "string"
                 }
             }
         },
-        "models.UserSignUp": {
+        "model.UserSignIn": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.UserSignUp": {
             "type": "object",
             "required": [
                 "birthday",
                 "email",
                 "gender",
                 "name",
+                "password",
                 "photo_url"
             ],
             "properties": {
@@ -326,9 +399,13 @@
                     "type": "string"
                 },
                 "gender": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "male, female"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "password": {
                     "type": "string"
                 },
                 "photo_url": {
